# AdventOfCode

./: .gitignore  Makefile  README.md  aoc.lua  benchmark_lua.bash  day-01.c  day-02.c  day-03.c  day-04.c  day-05.c  day-06.c  day-07.c  day-08.c  day-09.c  day-10.c  day-11.c  day-13.c  day-15.c  day-16.c  day-17.c  day-18.c  day-19.c  get_input.lua  hide_testing.bash  mon_day.bash  read_file.c  read_file.h
2020/: Makefile  day-02.c  day-05.c  day-07.c  day-12.c  day-20.c  day-20_tile.h  day-21.c  day-22.c  day-23.c  day-25.c  queue.h  tree.h
2020_C/: day-01.c  day-02.c  day-03.c  day-04.c  day-05.c  day-06.c  day-07.c  day-08.c  day-09.c  day-10.c  day-11.c  day-12.c  day-13.c  day-14.c  day-15.c  day-16.c  day-17.c  day-18.c  day-19.c  day-20.c  day-20__2021-09-26-Note-15-14.xopp  day-20_img.c  day-20_img.h  day-20_tile.c  day-20_tile.h  day-21.c  day-22.c  day-23.c  day-24.c  day-25.c  read_file.c  read_file.h
2020_Cpp/: CMakeLists.txt  day-01.cpp  day-02.cpp  day-02.reddit.cpp  day-03.cpp
2021_lua/: README.md  aoc.lua  aocutils.lua  benchmark_lua.bash  day01.lua  day02.lua  day03.lua  day04.lua  day05.lua  day06.lua  day07.lua  day08.lua  day09.lua  day10.lua  day11.lua  day12.lua  day13.lua  day14.lua  day15.lua  day16.lua  day16_thoughts.xopp  day17.lua  day18.lua  day19.lua  day20.lua  day21.lua  day22.lua  day23.lua  day24.lua  day25.lua  file.lua  linAlg.lua  template.lua
2022_Cpp/: .clang-format  CMakeLists.txt  aocutils.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  mon_day.bash  template.cpp
2023_rust/: Cargo.toml  new.bash
2023_rust/day01/: Cargo.toml
2023_rust/day01/src/: lib.rs
2023_rust/day02/: Cargo.toml
2023_rust/day03/: Cargo.toml
2023_rust/day04/: Cargo.toml
2023_rust/day05/: Cargo.toml
2023_rust/day06/: Cargo.toml
2023_rust/day07/: Cargo.toml
2023_rust/day08/: Cargo.toml
aoc_cli/: aoc_cli.lua  utils.lua
(+17 files in other folders)
