cmake_minimum_required(VERSION 3.21)
project(AoC2022_Cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(day01 day01.cpp)
add_executable(day02 day02.cpp)
add_executable(day03 day03.cpp)
add_executable(day04 day04.cpp)
add_executable(day05 day05.cpp)
add_executable(day06 day06.cpp)
add_executable(day07 day07.cpp)
