[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "day01_bench"
harness = false

[dependencies]
day_trait = {path="../day_trait"}
anyhow = "1.0"
regex = "1.10.2"

[dev-dependencies]
criterion = {version = "0.3", features=["html_reports"]}
